; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_dp_backing_file.c_macx_swapinfo.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vm/extr_dp_backing_file.c_macx_swapinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_CONFIG_SWAP_IS_PRESENT = common dso_local global i64 0, align 8
@PAGE_SIZE_64 = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @macx_swapinfo(i64* %0, i64* %1, i64* %2, i32* %3) #0 {
  %5 = alloca i64*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  store i64* %0, i64** %5, align 8
  store i64* %1, i64** %6, align 8
  store i64* %2, i64** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i64, i64* @VM_CONFIG_SWAP_IS_PRESENT, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %4
  %12 = call i64 (...) @vm_swap_get_total_space()
  %13 = load i64*, i64** %5, align 8
  store i64 %12, i64* %13, align 8
  %14 = call i64 (...) @vm_swap_get_free_space()
  %15 = load i64*, i64** %6, align 8
  store i64 %14, i64* %15, align 8
  %16 = load i64, i64* @PAGE_SIZE_64, align 8
  %17 = load i64*, i64** %7, align 8
  store i64 %16, i64* %17, align 8
  %18 = load i32, i32* @TRUE, align 4
  %19 = load i32*, i32** %8, align 8
  store i32 %18, i32* %19, align 4
  br label %26

20:                                               ; preds = %4
  %21 = load i64*, i64** %5, align 8
  store i64 0, i64* %21, align 8
  %22 = load i64*, i64** %6, align 8
  store i64 0, i64* %22, align 8
  %23 = load i64*, i64** %7, align 8
  store i64 0, i64* %23, align 8
  %24 = load i32, i32* @FALSE, align 4
  %25 = load i32*, i32** %8, align 8
  store i32 %24, i32* %25, align 4
  br label %26

26:                                               ; preds = %20, %11
  ret i32 0
}

declare dso_local i64 @vm_swap_get_total_space(...) #1

declare dso_local i64 @vm_swap_get_free_space(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
